@@ -7,26 +7,53 @@
 </head>
 <body ng-app="PlayAdminApp">
 
-    <div class="full">
         <nav class="navbar navbar-default" role="navigation" id="top-menu">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <span class="navbar-brand" href="#">Playme</span>
-            </div>
-            <ul class="nav navbar-nav">
-                <li><a href="#/directories" id="navbar-playlists">Directories</a></li>
-                <li><a href="#/tracks" id="navbar-playlists">Tracks</a></li>
-                <li><a href="#/users" id="navbar-playlists">Users</a></li>
-                <li><a href="#/artists" id="navbar-playlists">Artists</a></li>
-            </ul>
-
+           <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <div class="navbar-header">
+                    <span class="navbar-brand" href="#">Playme</span>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li><a href="#/directories" id="navbar-playlists">Directories</a></li>
+                    <li><a href="#/tracks" id="navbar-playlists">Tracks</a></li>
+                    <li><a href="#/users" id="navbar-playlists">Users</a></li>
+                    <li><a href="#/artists" id="navbar-playlists">Artists</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown" uib-dropdown>
+                        <a href="" uib-dropdown-toggle class="dropdown-toggle" data-toggle="dropdown" uib-dropdown-toggle>me <b class="caret"></b></a>
+                         <ul class="dropdown-menu">
+                              <li><a href="#">{{ me.user.name }}</a></li>
+                              <li role="presentation" class="divider"></li>
+                              <li><a href="" id="logout" ng-click="logout()">Logout</a></li>
+                          </ul>
+                    </li>
+                </ul>
+           </div>
         </nav>
-        <div ng-view class="container-fluid"></div>
+        <div  ng-if="me.user" ng-view class="container-fluid"></div>
+        <div  ng-if="!me.user" ng-controller="LoginController" class="container-fluid">
+            <form id="login-form" method="POST" ng-submit="submit()">
+                <div class="modal-header">
+                    <h4 class="modal-title">Login</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <input type="text" id="login-name" class="form-control" placeholder="Login name" aria-describedby="login-name-addon" ng-model="name" />
+                    </div>
+                    <div class="form-group">
+                        <input type="password" id="login-password" class="form-control" placeholder="***" aria-describedby="login-password-addon" ng-model="password" />
+                    </div>
+                     <div class="form-group">
+                        <input type="checkbox" id="login-remember" class="form-control"  aria-describedby="login-remember-addon" ng-model="remember" />
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button id="login-form-submit" type="submit" class="btn btn-primary">Login</button>
+                </div>
+            </form>
+
+        </div>
+
     </div>
     <script src="/static/js/angular.js"></script>
     <script src="/static/js/angular-route.js"></script>
